also fix overflowing dtab in playground results

--- a/admin/src/main/resources/io/buoyant/admin/css/delegator.css
+++ b/admin/src/main/resources/io/buoyant/admin/css/delegator.css
@@ -9,6 +9,7 @@
 .panel, .panel-heading, .list-group-item, .list-group {
   border: none;
   box-shadow: none;
+  word-wrap: break-word;
 }
 
 .list-group-item.list-group-item-plain {
